--- a/.ebextensions/options.config
+++ b/.ebextensions/options.config
@@ -1,3 +1,9 @@
+packages:
+  yum:
+    freetype-devel: []
+    libjpeg-turbo-devel: []
+    libpng-devel: []
+
 option_settings:
   aws:elasticbeanstalk:application:environment:
     DJANGO_SETTINGS_MODULE: ot.settings.prod
